# upower-notify

./: Cargo.toml  README.md  flake.nix  package.nix
contrib/: config.toml  upower-notify.service
src/: config.rs  main.rs
