[package]
name = "upower-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
notify-rust = "4.11.7"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
zbus = "5.11.0"

