[package]
name = "upower-notify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.31"
log = "0.4.28"
notify-rust = "4.11.7"
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
xdg = "3.0.0"
zbus = "5.11.0"

